--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ cryptography==2.7
 future==0.17.1
 idna==2.8
 pkg-resources==0.0.0
+psycopg2==2.8.4
 pycparser==2.19
 python-telegram-bot==12.0.0b1
 requests==2.22.0
 six==1.12.0
+SQLAlchemy==1.3.12
 tornado==6.0.3
 urllib3==1.25.3
